--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-*.iml
+# Ignore compiled binary files
+*.o
+*.so
+*.exe
+*.dll
+*.class
+
+# Ignore build directories
 target
-.idea
+build/
+bin/
+out/
+
+# CMake files (if not needed)
+CMakeCache.txt
+CMakeFiles/
+
+# Ignore logs and temporary files
+*.log
+*.tmp
+
+# IDE / editors
+.idea/
+.vscode/
+*.iml
+
+# System files
+.DS_Store
+Thumbs.db
