5. Log4j. FileAppender и другие appenders. [#504876]

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,8 +1,32 @@
-rootLogger.level=DEBUG
-rootLogger.appenderRefs=console
-rootLogger.appenderRef.console.ref=Console
-appender.console.type=Console
-appender.console.name=Console
-appender.console.target=SYSTEM_OUT
-appender.console.layout.type=PatternLayout
-appender.console.layout.pattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c:%M:%L - %m%n
+# TRACE, DEBUG, INFO, WARN, ERROR
+rootLogger.level=TRACE
+rootLogger.appenderRefs=CONSOLE_LOG, FILE_LOG, FILE_ERROR
+rootLogger.appenderRef.CONSOLE_LOG.ref=CONSOLE_LOG
+rootLogger.appenderRef.FILE_LOG.ref=FILE_LOG
+rootLogger.appenderRef.FILE_ERROR.ref=FILE_ERROR
+# Console appender
+appender.CONSOLE_LOG.type=Console
+appender.CONSOLE_LOG.name=CONSOLE_LOG
+appender.CONSOLE_LOG.target=SYSTEM_OUT
+appender.CONSOLE_LOG.filter.threshold.type=ThresholdFilter
+appender.CONSOLE_LOG.filter.threshold.level=WARN
+appender.CONSOLE_LOG.layout.type=PatternLayout
+appender.CONSOLE_LOG.layout.pattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c:%M:%L - %m%n
+# File appender (DEBUG лог)
+appender.FILE_LOG.type=File
+appender.FILE_LOG.name=FILE_LOG
+appender.FILE_LOG.fileName=logs/debug.log
+appender.FILE_LOG.append=true
+appender.FILE_LOG.filter.threshold.type=ThresholdFilter
+appender.FILE_LOG.filter.threshold.level=DEBUG
+appender.FILE_LOG.layout.type=PatternLayout
+appender.FILE_LOG.layout.pattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c:%M:%L - %m%n
+# File appender (ERROR лог)
+appender.FILE_ERROR.type=File
+appender.FILE_ERROR.name=FILE_ERROR
+appender.FILE_ERROR.fileName=logs/error.log
+appender.FILE_ERROR.append=true
+appender.FILE_ERROR.filter.threshold.type=ThresholdFilter
+appender.FILE_ERROR.filter.threshold.level=ERROR
+appender.FILE_ERROR.layout.type=PatternLayout
+appender.FILE_ERROR.layout.pattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %5p %c:%M:%L - %m%n
