--- a/data/app.properties
+++ b/data/app.properties
@@ -1,4 +1,9 @@
 # PostgreSQL
+jdbc.driver=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/deleteme
+jdbc.login=postgres
+jdbc.password=password
+# Hibernate
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.connection.url=jdbc:postgresql://127.0.0.1:5432/trackstudio
 hibernate.connection.driver_class=org.postgresql.Driver
